updated dockerfile to include all dependencies and removed unused imports

--- a/projects/_02_sfc_internal/cqc_coverage/fargate/Dockerfile
+++ b/projects/_02_sfc_internal/cqc_coverage/fargate/Dockerfile
@@ -7,6 +7,7 @@ ENV POLARS_TEMP_DIR=/tmp/polars
 ENV PYTHONPATH=/app
 
 # Dependencies
+COPY polars_utils polars_utils
 COPY utils/column_names /app/utils/column_names/
 COPY utils/column_values /app/utils/column_values/
 COPY utils/value_labels /app/utils/value_labels
