Initial job conversion from pyspark to polars

--- a/projects/_03_independent_cqc/Dockerfile_and_requirements/Dockerfile
+++ b/projects/_03_independent_cqc/Dockerfile_and_requirements/Dockerfile
@@ -18,6 +18,7 @@ COPY utils/value_labels /app/utils/value_labels
 COPY projects/_03_independent_cqc/_01_merge/fargate/prepare_job_role_counts.py /app/prepare_job_role_counts.py
 COPY projects/_03_independent_cqc/_01_merge/fargate/merge_ind_cqc_data.py /app/merge_ind_cqc_data.py
 COPY projects/_03_independent_cqc/_01_merge/fargate/validate_merged_ind_cqc_data.py /app/validate_merged_ind_cqc_data.py
+COPY projects/_03_independent_cqc/_02_clean/fargate/clean_ind_cqc_filled_posts.py /app/clean_ind_cqc_filled_posts.py
 COPY projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/estimate_ind_cqc_filled_posts_by_job_role.py /app/estimate_ind_cqc_filled_posts_by_job_role.py
 
 COPY projects/_03_independent_cqc/Dockerfile_and_requirements/requirements.txt /app/requirements.txt
