updated docker file to include clean utils dependencies

--- a/projects/_03_independent_cqc/Dockerfile_and_requirements/Dockerfile
+++ b/projects/_03_independent_cqc/Dockerfile_and_requirements/Dockerfile
@@ -8,6 +8,7 @@ ENV PYTHONPATH=/app
 
 # Dependencies
 COPY projects/_03_independent_cqc/_01_merge/fargate/utils /app/projects/_03_independent_cqc/_01_merge/fargate/utils
+COPY projects/_03_independent_cqc/_02_clean/fargate/utils /app/projects/_03_independent_cqc/_02_clean/fargate/utils
 COPY projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/utils /app/projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/utils
 COPY polars_utils /app/polars_utils
 COPY utils/column_names /app/utils/column_names/
