Revert "Merge pull request #1212 from NMDSdevopsServiceAdm/1329-tf-rf"
This reverts commit 36fddecf57eedf453c6d7663a6ea8cb80204ec1e, reversing
changes made to b88908b2d3f1193b1b14f42ab959c55cae553a43.

--- a/.gitignore
+++ b/.gitignore
@@ -43,15 +43,15 @@ override.tf.json
 #
 # !example_override.tf
 
-# Ignore tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-*tfplan*
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
 
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
 
-# Include terraform dependancy lock file
-# .terraform.lock.hcl
+# Ignore terraform lock
+.terraform.lock.hcl
 
 terraform.tfvars
 
