Add terraform fmt pre-commit check

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,11 @@ repos:
       - id: pydoclint
         args: [--style=google, --quiet]
 
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: "v1.105.0"
+    hooks:
+      - id: terraform_fmt
+
   - repo: local
     hooks:
       - id: ban-show
