--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,8 @@ ipykernel = "6.30.1"
 mock = "5.2.0"
 pre-commit = "4.3.0"
 pylint = "3.3.8"
+pytest = "9.0.2"
+pytest-xdist = "3.8.0"
 pytest-watch = "4.2.0"
 moto = "==5.1.11"
 pyarrow = "==21.0.0"
