--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,15 +75,12 @@ jobs:
           paths:
             - ~/.local/share/virtualenvs
       - run:
-          name: run unit tests
+          name: Run unit tests and generate coverage
           command: |
-            pipenv run coverage run --source=. -m unittest discover -s . -p "test_*.py"
-      - run:
-          name: Generate coverage report
-          command: |
-            pipenv run coverage report
-            pipenv run coverage xml
-            pipenv run coverage html
+            pipenv run pytest --cov=. \
+              --cov-report=term \
+              --cov-report=xml \
+              --cov-report=html
       - store_artifacts:
           path: htmlcov
 
