--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ pre-commit = "4.3.0"
 pylint = "3.3.8"
 pytest = "9.0.2"
 pytest-xdist = "3.8.0"
+pytest-cov = "7.0.0"
 pytest-watch = "4.2.0"
 moto = "==5.1.11"
 pyarrow = "==21.0.0"
