--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,8 @@ jobs:
     docker:
       - image: cimg/python:3.11.12
     resource_class: large
+    environment:
+      SPARK_VERSION: "3.5"       # Required for pydeequ to initialize
     steps:
       - checkout
       - restore_cache:
