--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,9 +72,15 @@ jobs:
           command: |
             pip install pipenv
             pipenv install --dev
+      # Pre-cache the pyqeequ dependency so xdist works better.
+      - run:
+            name: Pre-cache Spark JARs
+            command: pipenv run python scripts/fetch_dependencies.py
       - save_cache:
           key: v1.1-deps-{{ checksum "Pipfile.lock" }}
           paths:
+            - ~/.m2/repository
+            - ~/.ivy2/jars
             - ~/.local/share/virtualenvs
       - run:
           name: Run unit tests and generate coverage
