--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
   test:
     docker:
       - image: cimg/python:3.11.12
-    resource_class: xlarge
+    resource_class: large
     environment:
       SPARK_VERSION: "3.5"       # Required for pydeequ to initialize
     steps:
