--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,9 +88,11 @@ jobs:
             pipenv run pytest \
               -n auto --dist loadfile \
               --cov=. \
-              --cov-report=term \
               --cov-report=xml \
               --cov-report=html
+      - run:
+            name: Output Coverage Report
+            command: pipenv run coverage report
       - store_artifacts:
           path: htmlcov
 
