Update terraform version to version installed by team

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ parameters:
   GHA_Meta:
     type: string
     default: ""
+  terraform_version:
+    type: string
+    default: 1.13.5
 
 orbs:
   aws-cli: circleci/aws-cli@5.4.1
@@ -115,7 +118,7 @@ jobs:
 
   lint-terraform:
     docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:1.13.1
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:<< pipeline.parameters.terraform_version >>
     resource_class: small
     steps:
       - checkout
@@ -135,7 +138,7 @@ jobs:
         type: env_var_name
     working_directory: /tmp/project
     docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:1.13.1
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:<< pipeline.parameters.terraform_version >>
     resource_class: small
     steps:
       - checkout
@@ -171,7 +174,7 @@ jobs:
       secret_key:
         type: env_var_name
     docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:1.13.1
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:<< pipeline.parameters.terraform_version >>
     resource_class: small
     steps:
       - checkout
@@ -288,7 +291,7 @@ jobs:
   terraform-destroy:
     working_directory: /tmp/project
     docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:1.13.1
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:<< pipeline.parameters.terraform_version >>
     resource_class: small
     steps:
       - checkout
