1388 - Added cleaned ind cqc validation script to estimates pipeline, and added script to dockerfile.

--- a/projects/_03_independent_cqc/Dockerfile_and_requirements/Dockerfile
+++ b/projects/_03_independent_cqc/Dockerfile_and_requirements/Dockerfile
@@ -20,6 +20,7 @@ COPY projects/_03_independent_cqc/_01_merge/fargate/prepare_job_role_counts.py /
 COPY projects/_03_independent_cqc/_01_merge/fargate/merge_ind_cqc_data.py /app/merge_ind_cqc_data.py
 COPY projects/_03_independent_cqc/_01_merge/fargate/validate_merged_ind_cqc_data.py /app/validate_merged_ind_cqc_data.py
 COPY projects/_03_independent_cqc/_02_clean/fargate/clean_ind_cqc_filled_posts.py /app/clean_ind_cqc_filled_posts.py
+COPY projects/_03_independent_cqc/_02_clean/fargate/validate_cleaned_ind_cqc_data.py /app/validate_cleaned_ind_cqc_data.py
 COPY projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/estimate_ind_cqc_filled_posts_by_job_role.py /app/estimate_ind_cqc_filled_posts_by_job_role.py
 COPY projects/_03_independent_cqc/_09_archive_estimates/fargate/archive_filled_posts_estimates.py /app/archive_filled_posts_estimates.py
 
